# franklinwh-advisor

./: .gitignore  ABOUT.md  ABOUT.txt  README.md  RUNBOOK.md  install.sh  pyproject.toml  scrape.py  test_alerts.py  update.sh
franklinwh_scraper/: __init__.py  account.py  advisor.py  chatbot.py  cli.py  client.py  config.py  exporters.py  history.py  notifier.py  predictor.py  tou.py  weather.py
franklinwh_scraper/scrapers/: __init__.py  faq.py  products.py  support.py
tests/: test_smoke.py  test_unit.py
