[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "franklinwh-advisor"
version = "1.1.0"
description = "Smart home battery advisor for FranklinWH systems — automated alerts, solar forecasting, TOU cost tracking, and AI chat"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "franklinwh", "battery", "solar", "home energy",
    "energy storage", "smart home", "alerts", "advisor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "click>=8.0",
    "beautifulsoup4>=4.11",
    "anthropic>=0.40",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[project.authors]]
name = "Eric Chang"

[project.urls]
Homepage = "https://github.com/echang793/franklinwh-advisor"
"Bug Tracker" = "https://github.com/echang793/franklinwh-advisor/issues"

[project.scripts]
franklinwh = "franklinwh_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["franklinwh_scraper*"]
